# mindOS

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml  f2-eval.yml
apps/ai/: .env.example  .gitignore  Dockerfile  EVAL.md  README.md  pyproject.toml
apps/ai/app/: __init__.py  config.py  main.py
apps/ai/app/eval/: __init__.py  loader.py  metrics.py  run_eval.py
apps/ai/app/eval/dataset/: ANNOTATION_GUIDELINES.md  README.md  case-01-es-task-person-project.json  case-02-en-task-person.json  case-03-es-note-no-task.json  case-04-en-note-no-task.json  case-05-es-multi-task-bullets.json  case-06-en-event-people.json  case-07-es-ambiguous-task.json  case-08-en-task-project-deadline.json  case-09-es-task-assign-project.json  case-10-en-reminder-task.json  case-11-es-event-time.json  case-12-en-task-assign.json  case-13-es-voice-task-project.json  case-14-en-event-people-topics.json  case-15-es-health-note.json  case-16-es-errands-only-tasks.json  case-17-en-greeting-no-actionable.json  case-18-es-vague-no-actionable.json  case-19-es-finance-voice-task.json  case-20-en-studies-task-event.json  case-21-es-family-event-people.json  case-22-en-dense-work-note.json  case-23-es-health-appointment-event.json  case-24-en-reminder-vague-omit.json  case-25-es-voice-ambiguous-task.json  case-26-en-standup-notes-no-task.json  case-27-es-finance-multi-task.json  case-28-en-meeting-task-person.json  case-29-es-gratitude-note.json  case-30-en-voice-task-person.json  case-31-es-errands-omit-relative.json  case-32-en-health-tentative-task.json  case-33-es-idea-note-no-task.json  case-34-en-kickoff-dense.json  case-35-es-voice-omit-role.json  case-36-es-family-event-no-task.json  case-37-en-studies-task-topics.json  case-38-es-pet-not-person.json  (+7 more)
apps/ai/app/providers/: __init__.py  base.py  factory.py  fake_provider.py  gemini_provider.py  groq_provider.py  openai_compatible.py  openai_provider.py  retry.py
apps/ai/app/query/: service.py
apps/ai/app/understanding/: __init__.py  contract.py  cost_meter.py  enrichment.py  extract.py  graph_writer.py  pipeline.py  rls.py  store.py  text_utils.py  worker.py
apps/ai/tests/: test_contract.py  test_dataset.py  test_enrichment.py  test_extraction.py  test_factory.py  test_graph_writer_integration.py  test_health.py  test_metrics.py  test_pipeline.py  test_query.py  test_retry.py  test_run_eval.py  test_worker.py  test_worker_integration.py  test_worker_startup.py
apps/api/: .env.example  .eslintrc.js  Dockerfile  README.md  TESTING.md  docker-entrypoint.sh  package-lock.json  package.json
apps/mobile/: .gitignore  (+3 more)
docs/: ESTADO_DEL_PROYECTO.md  HOW_TO_RUN_THE_AI_EXAM.md  README.md
infra/: docker-compose.test.yml  docker-compose.yml
(+203 files in other folders)
